--- a/Index.html
+++ b/Index.html
@@ -181,7 +181,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="img/speakers/1 - Copy (3).jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">NAMA</a></h3>
                 <p>JAWATAN/POSISI</p>
